Adjust styling of footer, fix issue where with fewer Pokemon sprites the spacing is odd

--- a/style.css
+++ b/style.css
@@ -19,38 +19,28 @@
 /*  */
 html body {
     padding-top: 290px;
-    /* padding-bottom: 100px; */
-}
-
-#root {
-    min-height: 300px;
+    padding-bottom: 22rem;
 }
 
 /* 290px wide */
 @media only screen and (min-width: 290px) {
     html body {
         padding-top: 270px;
-    }
-    #root {
-        min-height: 400px;
+        padding-bottom: 20rem;
     }
 }
 /* 326px wide */
 @media only screen and (min-width: 326px) {
     html body {
         padding-top: 220px;
-    }
-    #root {
-        min-height: 450px;
+        padding-bottom: 18rem;
     }
 }
 /* 768px wide */
 @media only screen and (min-width: 768px) {
     html body {
         padding-top: 170px;
-    }
-    #root {
-        min-height: 600px;
+        padding-bottom: 12rem;
     }
 }
 
@@ -235,3 +225,42 @@ html body {
 .tb-on {
     border: solid 3px black;
 }
+
+
+
+
+/*  */
+/* Code to keep footer at bottom */
+/*  */
+
+ html {
+    height: 100%;
+    box-sizing: border-box;
+  }
+  
+  *,
+  *:before,
+  *:after {
+    box-sizing: inherit;
+  }
+  
+  body {
+    position: relative;
+    margin: 0;
+    min-height: 100%;
+    font-family: "Helvetica Neue", Arial, sans-serif;
+  }
+  
+  /**
+   * Footer Styles
+   */
+  
+  footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    background-color: #efefef;
+    text-align: center;
+  }
